# tug

tug/: .bandit  .env.example  .firebaserc  .gitignore  .safety-policy.json  .semgrepignore  CI_CD_ENHANCEMENT_SUMMARY.md  GoogleService-Info.plist  INDULGENCE_STREAK_DOCUMENTATION.md  NOTIFICATION_BATCHING.md  PHASE_1_COMPLETION_REPORT.md  PREMIUM_FEATURES_ROADMAP.md  PREMIUM_SETUP_GUIDE.md  README.md  README_STRAVA.md  SECURITY.md  SECURITY_CI_CD_GUIDE.md  TUG_OPTIMIZATION_MASTER_PLAN.md  firebase.json  pubspec.yaml  render.yaml  test_notification_batching.py  v.txt
tug/.claude/agents/: tug-analytics-engineer.md  tug-devops-engineer.md  (+4 more)
tug/.firebase/: hosting.YnVpbGQvd2Vi.cache
tug/.github/: dependabot.yml
tug/.zap/: rules.tsv
tug/backend/: .coveragerc  COACHING_SYSTEM_SUMMARY.md  DATABASE_OPTIMIZATION_SUMMARY.md  Dockerfile  ML_PREDICTION_SYSTEM_SUMMARY.md  MONITORING_SETUP.md  PREMIUM_GROUPS_IMPLEMENTATION.md  REAL_TIME_MESSAGING_IMPLEMENTATION.md  TESTING_INFRASTRUCTURE.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-security.txt  requirements.txt  run.py  run_tests.py  security_audit_report.md  simple_export_test.py  simple_test_habit_suggestions.py  startup.py  test_basic.py  test_coaching_system.py  test_habit_suggestions.py  test_ml_predictions.py  test_premium_groups.py
tug/backend/.github/workflows/: test.yml
tug/backend/app/: main.py
tug/backend/app/api/: routes.py
tug/backend/app/api/endpoints/: achievements.py  activities.py  analytics.py  coaching.py  enhanced_challenges.py  gamification.py  group_messaging.py  habit_suggestions.py  indulgences.py  ml_predictions.py  mood.py  notifications.py  premium_features.py  premium_groups.py  rankings.py  seasonal_events.py  social.py  subscription.py  users.py  values.py  vices.py
tug/backend/app/core/: api_response.py  auth.py  config.py  database.py  errors.py  example_usage.py  graceful_degradation.py  logging_config.py  middleware.py  retry.py
tug/backend/app/models/: achievement.py  activity.py  analytics.py  challenge.py  coaching_message.py  friendship.py  gamification.py  group_analytics.py  group_message.py  habit_suggestion.py  indulgence.py  mood.py  notification.py  post_comment.py  premium_group.py  seasonal_event.py  social_post.py  user.py  value.py  vice.py
tug/backend/app/monitoring/: __init__.py  alerts.py  dashboard.py  deployment_monitor.py  endpoints.py  health.py  log_aggregation.py  metrics.py  middleware.py
tug/backend/app/schemas/: achievement.py  activity.py  coaching_message.py  group_message.py  habit_suggestion.py  indulgence.py  mood.py  notification.py  premium_group.py  social.py  user.py  value.py  vice.py
tug/backend/app/services/: achievement_service.py  activity_service.py  analytics_service.py  auth.py  coaching_background_service.py  coaching_scheduler.py  coaching_service.py  coaching_template_service.py  enhanced_challenge_service.py  gamification_service.py  group_analytics_service.py  group_background_service.py  group_challenge_service.py  group_messaging_service.py  group_ml_service.py  group_post_service.py  habit_suggestion_service.py  habit_system_initializer.py  habit_template_seeder.py  media_service.py  ml_background_service.py  ml_prediction_service.py  ml_training_service.py  mood_service.py  notification_service.py  prediction_cache_service.py  premium_group_service.py  rankings_service.py  seasonal_event_service.py  social_service.py  subscription_service.py  user_service.py  value_service.py  vice_service.py  websocket_manager.py
tug/backend/app/utils/: json_utils.py  security_audit.py  validation.py
tug/backend/migrations/: 20250508_add_streak_columns.py  20250510_add_achievements_table.py  20250713_update_achievements_to_lowercase.py  20250714_add_mood_tracking.py  20250714_add_mood_tracking_pymongo.py  20250714_fix_mood_indexes.py  20250724_migrate_activity_value_ids.py
tug/backend/monitoring/: alertmanager.yml  loki-config.yml  prometheus.yml  promtail-config.yml
tug/backend/monitoring/grafana/dashboards/: tug-api-overview.json
tug/backend/monitoring/grafana/provisioning/dashboards/: dashboards.yml
tug/backend/monitoring/grafana/provisioning/datasources/: datasources.yml
tug/backend/scripts/: db_migrate_indexes.py  db_performance_report.py
tug/backend/tests/: conftest.py  test_activities.py  test_activity_service.py  test_additional_services.py  test_analytics_export.py  test_analytics_export_unit.py  test_api_endpoints.py  test_comprehensive_error_handling.py  test_fixtures.py  test_security.py  test_social_service.py  test_user_service.py  test_value_service.py  test_values.py
tug/backend/tests/performance/: locustfile.py
tug/ios/: Podfile  tugg_storekit.storekit
tug/lib/: firebase_options.dart  main.dart
tug/linux/: CMakeLists.txt
tug/test/: progress_screen_manual_test.dart  rate_limiter_test.dart
tug/web/: index.html  manifest.json
(+220 files in other folders)
